<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.damhwa2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.damhwa2.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_matching"
        android:name="com.example.damhwa2.ui.matching.MatchingFragment"
        android:label="@string/title_matching"
        tools:layout="@layout/fragment_matching" >
        <!-- ProfileFragment로 이동하는 액션 정의 -->
        <action
            android:id="@+id/action_navigation_matching_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.damhwa2.ui.mypage.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.damhwa2.ui.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat" />
    <!-- New Q&A Fragment -->
    <fragment
        android:id="@+id/navigation_qna"
        android:name="com.example.damhwa2.ui.qna.QnaFragment"
        android:label="Q&amp;A"
        tools:layout="@layout/fragment_qna" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.damhwa2.ui.matching.ProfileFragment"
        android:label="@string/title_profile" >
        <action
            android:id="@+id/action_profileFragment_to_chatFragment"
            app:destination="@id/navigation_chat" />
    </fragment>
</navigation>